[package]
name = "radiance-cascade"
version = "0.1.0"
description = "A simulation of moth behaviour"
authors = ["Connor Flowers"]
repository = "https://github.com/c-florist/radiance-cascade"
edition = "2024"
rust-version = "1.88.0"

[package.metadata]
# Install with: `cargo install --locked --version <trunk-version> trunk`
trunk-version = "0.21"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.16"
bevy_rand = { version = "0.11", features = ["wyrand"] }
console_error_panic_hook = "0.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.2"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.17", features = ["js"] }
