[package]
name = "phototaxis"
version = "0.1.0"
description = "A simulation of moth behaviour"
authors = ["Connor Flowers"]
repository = "https://github.com/c-florist/phototaxis"
edition = "2024"
rust-version = "1.88.0"

[package.metadata]
# Install with: `cargo install --locked --version <trunk-version> trunk`
trunk-version = "^0.21"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[dependencies]
bevy = "0.16"
bevy_rand = { version = "0.11", features = ["wyrand"] }
console_error_panic_hook = "0.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.2"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.17", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']
